--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Student. Traveler. Adventurer. Living my best life.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Denver, Colorado</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Hiking, camping, fun-having</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Anything that allows me to explore the intersections of my interests in psychology, art, and science.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Denver, Colorado</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>The possibilities are truly endless</p>
     </section>
 
     <footer id="footer">
